<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <!-- Auth Flow -->
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.topplaygroundxml.features.auth.presentation.ui.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registrationFragment"
            app:destination="@id/registrationFragment" />
        <action
            android:id="@+id/action_loginFragment_to_weatherFragment"
            app:destination="@id/weatherFragment" />
    </fragment>

    <fragment
        android:id="@+id/registrationFragment"
        android:name="com.example.topplaygroundxml.features.auth.presentation.ui.RegistrationFragment"
        android:label="@string/registration"
        tools:layout="@layout/fragment_registration">
        <action
            android:id="@+id/action_registrationFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <!-- Main Flow -->
    <fragment
        android:id="@+id/weatherFragment"
        android:name="com.example.topplaygroundxml.features.weather.presentation.ui.WeatherFragment"
        android:label="@string/weather_title"
        tools:layout="@layout/fragment_weather" />

    <fragment
        android:id="@+id/calculatorFragment"
        android:name="com.example.topplaygroundxml.features.calculator.presentation.ui.CalculatorFragment"
        android:label="@string/calculator_title"
        tools:layout="@layout/fragment_calculator" />

    <fragment
        android:id="@+id/carListFragment"
        android:name="com.example.topplaygroundxml.features.carlist.presentation.ui.CarListFragment"
        android:label="@string/car_list_title"
        tools:layout="@layout/fragment_car_list" />

</navigation>