<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_medium"
    app:cardCornerRadius="@dimen/card_corner_medium"
    app:cardElevation="@dimen/elevation_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_medium"
        android:background="?attr/selectableItemBackground">

        <ImageView
            android:id="@+id/weatherIcon"
            android:layout_width="@dimen/icon_size_medium"
            android:layout_height="@dimen/icon_size_medium"
            android:layout_marginEnd="@dimen/margin_large" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day_of_month_example"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dayOfWeekText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_of_day_example"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/weatherDescriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_of_weather_example"
                android:textSize="@dimen/text_size_small" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end">

            <TextView
                android:id="@+id/dayTempText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_temperature_example"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nightTempText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/night_temperature_example"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/windText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_value_example"
                android:textSize="@dimen/text_size_small" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>