<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_medium">

        <ImageView
            android:id="@+id/carImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding_medium">

            <TextView
                android:id="@+id/brandModelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brand_model"
                android:textSize="@dimen/text_size_xlarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/yearText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/year_car"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_car"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/priceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_car"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>