<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_medium"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Заголовок -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/login"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:layout_marginBottom="@dimen/margin_xlarge" />

        <!-- Поле email -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Поле пароля -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Текст ошибки -->
        <TextView
            android:id="@+id/errorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/design_default_color_error"
            android:layout_marginBottom="@dimen/margin_medium"
            android:visibility="gone" />

        <!-- Прогресс бар (заменил на КиркулярПрогрессИндикатор потому что ругается на отрисовку, хз почему)-->
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:visibility="gone"
            app:indicatorColor="@color/black"
            app:trackColor="@color/light_gray" />

        <!-- Кнопка входа -->
        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/login_button"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_large" />

        <!-- Ссылка на регистрацию -->
        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:gravity="center"
            android:textColor="@color/design_default_color_primary"
            android:layout_marginTop="@dimen/margin_large"
            android:padding="@dimen/padding_medium"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

</ScrollView>